CHANGES
=======

Version 0.1.0b1 (2009-??-??)
----------------------------

  - Added support for scheduled tasks.

    - http://code.google.com/p/typhoonae/issues/detail?id=5


Version 0.1.0a3 (2009-10-22)
----------------------------

  - Added support for sending XMPP invitations.

  - Fixes an issue where static file pattern handlers got ignored.

    - http://code.google.com/p/typhoonae/issues/detail?id=3

  - Fixed unit tests.


Version 0.1.0a2 (2009-10-17)
----------------------------

  - Added XMPP support.

  - Fixed an issue where an incorrect module path within a handler definition
    can cause the fcgiserver to crash on startup.

    - http://code.google.com/p/typhoonae/issues/detail?id=1

  - Refactored integer ID client API out of datastore stub.


Version 0.1.0a1 (2009-10-05)
----------------------------

  - First alpha release.